Saturday, November 2, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added documentation. With the exception of those associated
	  with Polygon, all API functions should now be documented.

Saturday, November 2, 2002	Al Riddoch <alriddoch@zepler.org>

	* Add rpm spec.

Friday, November 1, 2002	Ron Steinke <rsteinke@w-link.net>

	* Added Doxyfile.in to CVS, did some work towards docs

Wednesday, October 30, 2002     Michael Koch <konqueror@gmx.de>

	* Added manpage for wfmath-config.

Wednesday, October 23, 2002	Ron Steinke <rsteinke@w-link.net>

	* Portability fix. Apparently debian on sparc uses
	  int instead of long for the usec field of struct timeval.

Monday, October 10, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed operator==() for quaternions to regard two
	  quaternions as equal iff they produce the same
	  3x3 rotation matrix. This means q == -q is true.
        * Added a Shuffle() function which randomizes the order
          of elements contained in a std::vector.
	* Doc updates
	* Bumped version number to 0.2.10

Monday, September 2, 2002	Ron Steinke <rsteinke@w-link.net>

	* Bumped version number to 0.2.9

Friday, August 2, 2002		Ron Steinke <rsteinke@w-link.net>

	* Fixed a bug involving the machine dependence of the
	  behavior of % for negative numbers

Monday, July 22, 2002		Ron Steinke <rsteinke@w-link.net>

	* Wraped a declaration of a variable which is only used in
	  an assert() in #ifndef NDEBUG

Saturday, June 23, 2002		Ron Steinke <rsteinke@w-link.net>

	* Added timestamp class from Eris
	* Added random number generators (really wrappers for rand())
	* Added Quaternion::inverse()

Saturday, May 11, 2002		Ron Steinke <rsteinke@w-link.net>

	* Bumped version number to 0.2.8, due to the sign convention changes

Friday, May 10, 2002		Ron Steinke <rsteinke@w-link.net>

	* Added an isValid() flag to all classes. Point and Vector
	  also have a setValid() function, since you can assign
	  values directly to the array elements.